--- a/index.html
+++ b/index.html
@@ -84,16 +84,20 @@
 		                    <li><a href="#">Industry Involvement</a></li>
 	                	</ul>
                 </li>
-            </ul>
+            </ul>   
 
 
-
+            <form class="search" action="#">
+           		<input type="search" name="search"></input>
+            	<button type="submit" class="submit"><img src="searchBtn" alt="search">
+            </form>
             
         </nav>>
-            <form>
 
-            </form>
         </header>
+
+
+
 
 		<div>
             <section>
