fix search img icon

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <form class="search" action="#">
            		<input type="search" name="search"></input>
-            	<button type="submit" class="submit"><img src="searchBtn" alt="search">
+            	<button type="submit" class="submit"><img src="./img/searchBtn" alt="search">
             </form>
             
         </nav>>
