all the text to be used were added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <title>Comverse</title>
         <meta charset="UTF-8">
-
+		<link rel="stylesheet" href="css/main.css">
 
         
     </head>
@@ -99,13 +99,147 @@
 
 
 
-		<div>
-            <section>
+		<div class="carousel_cls">
+            <section class="carousel_cls_con">
               
     		</section>
 		</div>
+<!-- CREATE A SUPERIOR
+	 CUSTOMER EXPERIENCE -->
+<!--  -->
+<!-- Personalized Plans and Offerings, Smart Customer Interactions  -->
+<!-- Comprehensive Self-Service and Account Control -->
+<!-- Personalized Social Media Interactions and more -->
+<!--  -->
+<!-- learn more -> -->
+<!--  -->
+<!--  -->
+<!-- Meet Us at Managed
+	 Services World
+	 Congress 2014 -->
+<!-- Click for More Info -->
 
+<!-- Digital Lifestyle by
+	 Comverse -->
+<!-- Read more -->
 
+<!-- Smart Evolution One
+	 Goal, Many Paths -->
+<!-- See How -->
+<!--  -->
+<!--  -->
+<!--  -->
+<!-- WHAT CAN WE DO FOR YOU? -->
+<!--  -->
+<!-- Business Stimulating
+	 Analytics -->
+<!--  -->
+<!-- Digital Customer
+	 Experience -->
+<!--  -->
+<!-- Smart Monetization -->
+<!--  -->
+<!-- Optimization and
+	 Efficiency -->
+<!--  -->
+<!--Personalized Choice
+	& Control -->
+<!--  -->
+<!-- Business
+	 Transformation -->
+<!--  -->
+<!--  -->
+<!-- See all of our solutions -->
+<!--  -->
+<!--  -->
+<!--  -->
+
+<!-- WHAT'S HAPPENING AT COMVERSE? -->
+<!--  -->
+<!-- NEWS -->
+<!--  -->
+<!-- Comverse Regains Lead in
+	 Convergent Charging Market-->
+<!-- All News -->
+
+<!-- EVENTS -->
+<!--  -->
+<!-- Comverse Regains Lead in
+	 Convergent Charging Market -->
+<!-- All Events -->
+
+<!-- PRESS RELEASES -->
+<!--  -->
+<!-- Comverse Regains Lead in
+	 Convergent Charging Market-->
+<!-- All Press releases -->
+<!--  -->
+<!--  -->
+<!--  -->
+<!-- SUCCESS STORIES -->
+<!--  -->
+<!--  -->
+<!-- BTC, a full-service
+	 provider in the
+	 Bahamas, depends on
+	 Comverse solut...-->
+<!-- JONATHAN PIERCE -->
+<!-- Group Mobile Architect -->
+<!--  -->
+<!-- The expectations
+	 of Jersey Telecom have
+	 been completely met
+	 by Comvers... -->
+<!-- GRAEME MILLER -->
+<!-- CEO -->
+<!--  -->
+<!-- Comverse has
+	 demonstrated that
+	 they are partners, not
+	 just suppliers -->
+<!-- ADALE KEHASSAN -->
+<!-- CIO -->
+<!--  -->
+<!-- All 256 Succses Stories -->
+<!--  -->
+<!--  -->
+<!-- KEY SOLUTIONS -->
+<!-- Monetizing Data -->
+<!-- Over the Top (OTT) -->
+<!-- Machine to Machine (M2M) -->
+<!-- Cloud Computing -->
+<!-- Managed Services -->
+<!-- Customer Experience Management -->
+<!-- Rich Communication Suite (RCS) -->
+<!-- Social Media -->
+<!-- 4G/LTE -->
+<!--  -->
+<!--  -->
+<!-- PRODUCTS & SERVICES -->
+<!-- Billing -->
+<!-- VAS -->
+<!-- Mobile Internet -->
+<!-- Global Services -->
+<!-- Training Services -->
+<!--  -->
+<!--  -->
+<!-- COMPANY -->
+<!-- Executive Profiles -->
+<!-- Clients -->
+<!-- Investors -->
+<!-- Partners -->
+<!-- Corporate Responsibility -->
+<!-- Industry Involvement -->
+<!-- Careers -->
+<!--  -->
+<!-- LATEST PRESS RELEASE -->
+<!-- Comverse Regains -->
+<!-- Lead in Convergent -->
+<!-- Charging Market -->
+<!-- SUBSCRIBE TO COMVERSE -->
+<!-- SIGN UP -->
+<!--  -->
+<!-- Copyright C 2012 Comverse, Inc. | Privacy Policy -->
         <footer>
             <div>
  
