carousel_cls added

--- a/index.html
+++ b/index.html
@@ -89,10 +89,20 @@
 
             <form class="search" action="#">
            		<input type="search" name="search"></input>
-            	<button type="submit" class="submit"><img src="img/searchBtn" alt="search">
+            	<button type="submit" class="submit"><img src="./img/searchBtn" alt="search">
             </form>
             
         </nav>>
+
+
+
+
+
+
+
+
+
+
 
         </header>
 
@@ -101,34 +111,51 @@
 
 		<div class="carousel_cls">
             <section class="carousel_cls_con">
-              
+               	<h1>CREATE A SUPERIOR CUSTOMER EXPERIENCE</h1>
+                    <div class="carousel_cls_con_up">
+                        <ul class="carousel_cls_con_up_in">
+                            <li><a href="">Personalized Plans and Offerings, Smart Customer Interactions</a></li>
+                            <li><a href="">Comprehensive Self-Service and Account Control</a></li>
+                            <li><a href="">Personalized Social Media Interactions and more</a></li>
+                        </ul>
+                    </div>
+    			   <section class="carousel_cls_internal">
+    					<a href="" class="learn_more_btn">learn more</a> 
+                        <ul class="etc_cls">
+                            <li class="first"><a href="">1</a></li>
+                            <li class="second"><a href="">2</a></li>
+                            <li class="third"><a href="">3</a></li>
+                            <li class="forth"><a href="">4</a></li>
+                        </ul>
+
+    					<article class="boxes_cls">
+    						<ul>
+								<li class="orange_box"><h2>
+								Meet Us at Managed Services World Congress 2014</h2>
+    								<a href="">
+                                    <img src="img/link-icon-image.png" alt="MoreInfo">
+                                    Click for More Info</a>
+    							</li>
+    							<li class="pink_box"><h2>
+    								Digital Lifestyle by Comverse</h2>	
+    								<a href="">
+                                    <img src="img/link-icon-image.png" alt="ReadMore">
+                                    Read more</a>
+    							</li>
+    							<li class="green_box"><h2>
+    								Smart Evolution One Goal, Many Paths</h2>
+    								<a href="">
+                                    <img src="img/link-icon-image.png" alt="SeeHow">
+                                    See How</a>
+    							</li>
+
+    						</ul>
+    					</article>
+    				</section>
     		</section>
 		</div>
-<!-- CREATE A SUPERIOR
-	 CUSTOMER EXPERIENCE -->
-<!--  -->
-<!-- Personalized Plans and Offerings, Smart Customer Interactions  -->
-<!-- Comprehensive Self-Service and Account Control -->
-<!-- Personalized Social Media Interactions and more -->
-<!--  -->
-<!-- learn more -> -->
-<!--  -->
-<!--  -->
-<!-- Meet Us at Managed
-	 Services World
-	 Congress 2014 -->
-<!-- Click for More Info -->
 
-<!-- Digital Lifestyle by
-	 Comverse -->
-<!-- Read more -->
 
-<!-- Smart Evolution One
-	 Goal, Many Paths -->
-<!-- See How -->
-<!--  -->
-<!--  -->
-<!--  -->
 <!-- WHAT CAN WE DO FOR YOU? -->
 <!--  -->
 <!-- Business Stimulating
