offerings_cls added

--- a/index.html
+++ b/index.html
@@ -156,30 +156,23 @@
 		</div>
 
 
-<!-- WHAT CAN WE DO FOR YOU? -->
-<!--  -->
-<!-- Business Stimulating
-	 Analytics -->
-<!--  -->
-<!-- Digital Customer
-	 Experience -->
-<!--  -->
-<!-- Smart Monetization -->
-<!--  -->
-<!-- Optimization and
-	 Efficiency -->
-<!--  -->
-<!--Personalized Choice
-	& Control -->
-<!--  -->
-<!-- Business
-	 Transformation -->
-<!--  -->
-<!--  -->
-<!-- See all of our solutions -->
-<!--  -->
-<!--  -->
-<!--  -->
+		<div class="offerings_cls">
+            <section class="what_can_we_do">
+
+        			<h3> WHAT CAN WE DO FOR YOU? </h3>
+        				<ul class="icons_cls">
+        					<li class="business_stimu">Business Stimulating Analytics</li>
+        					<li class="digital">Digital Customer Experience</li>
+        					<li class="smart_mone">Smart Monetization</li>
+        					<li class="optimization">Optimization and Efficiency</li>
+        					<li class="personalized">Personalized Choice & Control</li>
+        					<li class="business_trans">Business Transformation</li>
+        				</ul>
+        				<a href='#' class="see_solutions_btn">See all of our solutions</a>
+            </section>
+        </div>
+
+
 
 <!-- WHAT'S HAPPENING AT COMVERSE? -->
 <!--  -->
