--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 
     <body>
+<!-- -------------------------------- Header --------------------------- -->
+<!-- -------------------------------- Header --------------------------- -->
         <!-- <h1>about</h1> -->
         <!-- <p>Comverse was found in 1982</p> -->
         <img src="img/comverse-logo.png" alt="A picture of Comverse logo">
@@ -95,20 +97,12 @@
         </nav>>
 
 
-
-
-
-
-
-
-
-
-
         </header>
 
 
 
-
+<!-- -------------------------------- Carousel --------------------------- -->
+<!-- -------------------------------- Carousel --------------------------- -->
 		<div class="carousel_cls">
             <section class="carousel_cls_con">
                	<h1>CREATE A SUPERIOR CUSTOMER EXPERIENCE</h1>
@@ -120,7 +114,7 @@
                         </ul>
                     </div>
     			   <section class="carousel_cls_internal">
-    					<a href="" class="learn_more_btn">learn more</a> 
+    					<a href="" class="more_btn">learn more</a> 
                         <ul class="etc_cls">
                             <li class="first"><a href="">1</a></li>
                             <li class="second"><a href="">2</a></li>
@@ -155,7 +149,8 @@
     		</section>
 		</div>
 
-
+<!-- -------------------------------- Offerings --------------------------- -->
+<!-- -------------------------------- Offerings --------------------------- -->
 		<div class="offerings_cls">
             <section class="what_can_we_do">
 
@@ -171,7 +166,8 @@
         				<a href='#' class="see_solutions_btn">See all of our solutions</a>
             </section>
         </div>
-
+<!-- -------------------------------- Happenings --------------------------- -->
+<!-- -------------------------------- Happenings --------------------------- -->
 
         <div class="happenings_cls">
     		<section class="happenings_cls_internal">
@@ -218,33 +214,91 @@
     			</ul>
     		</section>
         </div>
+<!-- -------------------------------- Success Stories --------------------------- -->
+<!-- -------------------------------- Success Stories --------------------------- -->
+
+		<div class="success_stories_cls">
+            <section class="success_stories_internal">
+    			<h5>SUCCESS STORIES</h5>
+    			<ul>
+
+    				<li itemscope itemtype="http://schema.org/Person" class="one">
+                        <div class="jonathan_pierce">
+
+	    					<blockquote>
+		                        <p>
+		                        BTC, a full-service provider in the Bahamas, depends on	Comverse solut...
+		                        </p>
+	                        </blockquote>
+                        <hr>
+    					
+                        <p class="person_info">
+	                        <p itemprop="name" class="name_info">JONATHAN PIERCE</p>
+	                        <span itemprop="jobTitle" class="job_info">Group Mobile Architect </span> 
+	                        <span itemprop="worksFor" class="cable_wireless"></span>
+                        </p>
+
+                        </div>
+          
+                        <span class="mtc"></span>
+                        <span class="tata_sky"></span>
+                        <span class="upc"></span>
+    				</li>
+
+    				<li itemscope itemtype="http://schema.org/Person" class="two">
+                        <span class="max_telecom"></span>
+                        <span class="knibctap"></span>
+                        <span class="videocon"></span>
+
+                        <div class="graeme_miller">
+
+    						<blockquote>
+	                            <p>
+	                            The expectations of Jersey Telecom have been completely met
+								by Comvers...                           
+								</p>
+                            </blockquote>
+                            <hr>
+
+                            <p class="person_info">
+    						<p itemprop="name" class="name_info">GRAEME MILLER</p>
+                            <span itemprop="jobTitle" class="job_info"> CEO</span>
+                            <span itemprop="worksFor" class="jt"></span>
+                            </p>
 
 
-<!-- SUCCESS STORIES -->
-<!--  -->
-<!--  -->
-<!-- BTC, a full-service
-	 provider in the
-	 Bahamas, depends on
-	 Comverse solut...-->
-<!-- JONATHAN PIERCE -->
-<!-- Group Mobile Architect -->
-<!--  -->
-<!-- The expectations
-	 of Jersey Telecom have
-	 been completely met
-	 by Comvers... -->
-<!-- GRAEME MILLER -->
-<!-- CEO -->
-<!--  -->
-<!-- Comverse has
-	 demonstrated that
-	 they are partners, not
-	 just suppliers -->
-<!-- ADALE KEHASSAN -->
-<!-- CIO -->
-<!--  -->
-<!-- All 256 Succses Stories -->
+                        </div>
+
+    				</li>
+
+    				<li itemscope itemtype="http://schema.org/Person" class="three">
+                        <div class="adale_kehassan">
+
+    						<blockquote>
+                            <p>
+                            "Comverse has demonstrated that they are partners, not	  just suppliers"
+                            </p>
+                            </blockquote>
+                            <hr>
+
+                            <p class="person_info">
+    						<p itemprop="name" class="name_info">ADALE KEHASSAN</p>
+                            <span itemprop="jobTitle" class="job_info">CIO</span>
+                            <span itemprop="worksFor" class="multi_links"></span> 
+                            </p>
+                            </div>
+
+                        <span class="three_mob"></span>
+                        <span class="play"></span>
+    				</li>
+
+    			</ul>
+    			<a href='' class="more_btn_see_more">All 256 Success Stories</a>
+                <!-- TODO CHECK!!!!!!!!!!!!!!!!!! -->
+			</section>
+		</div>
+
+
 <!--  -->
 <!--  -->
 <!-- KEY SOLUTIONS -->
@@ -284,6 +338,8 @@
 <!-- SIGN UP -->
 <!--  -->
 <!-- Copyright C 2012 Comverse, Inc. | Privacy Policy -->
+<!-- -------------------------------- Footer --------------------------- -->
+<!-- -------------------------------- Footer --------------------------- -->
         <footer>
             <div>
  
