--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <form class="search" action="#">
            		<input type="search" name="search"></input>
-            	<button type="submit" class="submit"><img src="img/searchBtn" alt="search">
+            	<button type="submit" class="submit"><img src="img/searchBtn.png" alt="search">
             </form>
             
         </nav>
