--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 	                	<ul class="nav_cls_internal">
 	                   		<li><a href="#">Smart Monetization</a></li>
 	                        <li><a href="#">Digital Customer Experience</a></li>
-	                        <li><a href="#">Personalized Choice & Control</a></li>
+	                        <li><a href="#">Personalized Choice &amp; Control</a></li>
 	                        <li><a href="#">Optimization and Efficiency</a></li>
 	                        <li><a href="#">Bussiness Tranformation</a></li>
-	                        <li><a href="#">Bussiness Enablement & Growth</a></li>
+	                        <li><a href="#">Bussiness Enablement &amp; Growth</a></li>
 	                        <li><a href="#">Bussiness Stimulating Analytics</a></li>
 	                        <li><a href="#">Customer Evolution</a></li>
 	                    </ul> 
@@ -39,10 +39,10 @@
                				<li><a href="#">BSS - Bussiness Support Systems</a></li>
 		                    <li><a href="#">Converged BSS</a></li>
 		                    <li><a href="#">Active Customer Management</a></li>
-		                    <li><a href="#">Online & Converged Charging</a></li>
+		                    <li><a href="#">Online &amp; Converged Charging</a></li>
 		                    <li><a href="#">Actionable Intelligence</a></li>
 		                    <li><a href="#">Social Media Gateway</a></li>
-		                    <li><a href="#">Mediation & Settlements</a></li>
+		                    <li><a href="#">Mediation &amp; Settlements</a></li>
 		                    <li><a href="#">Prepaid Billing</a></li>
 		                    <li><a href="#">Comverse Kenan</a></li>
 		                    <li><a href="#">Policy</a></li>
@@ -55,19 +55,19 @@
 		                    <li><a href="#">Cloud Offering</a></li>
 		                    <li><a href="#">Services</a></li>
 		                    <li><a href="#">Managed Services</a></li>
-		                    <li><a href="#">Learning & Certification Services</a></li>
+		                    <li><a href="#">Learning &amp; Certification Services</a></li>
                    
                     	</ul>
                 </li>
                 <li class="nav_cls_menu">
-	                <a href="#">NEWS & MEDIA</a>
+	                <a href="#">NEWS &amp; MEDIA</a>
 	               	    <ul class="nav_cls_internal">
 		                    <li><a href="#">Press Releases</a></li>
 		                    <li><a href="#">Events</a></li>
 		                    <li><a href="#">In the News</a></li>
 		                    <li><a href="#">Success Stories</a></li>
 		                    <li><a href="#">Awards</a></li>
-		                    <li><a href="#">Multimedia & Webinars</a></li>
+		                    <li><a href="#">Multimedia &amp; Webinars</a></li>
 		                    <li><a href="#">Newsletter</a></li>
 		                    <li><a href="#">Articales and Papers</a></li>
 	                    </ul>
@@ -82,7 +82,7 @@
 		                    <li><a href="#">Careers</a></li>
 		                    <li><a href="#">Partners</a></li>
 		                    <li><a href="#">Customers</a></li>
-		                    <li><a href="#">Value & Corporate Responsibility</a></li>
+		                    <li><a href="#">Value &amp; Corporate Responsibility</a></li>
 		                    <li><a href="#">Industry Involvement</a></li>
 	                	</ul>
                 </li>
@@ -160,7 +160,7 @@
         					<li class="digital">Digital Customer Experience</li>
         					<li class="smart_mone">Smart Monetization</li>
         					<li class="optimization">Optimization and Efficiency</li>
-        					<li class="personalized">Personalized Choice & Control</li>
+        					<li class="personalized">Personalized Choice &amp; Control</li>
         					<li class="business_trans">Business Transformation</li>
         				</ul>
         				<a href='#' class="see_solutions_btn">See all of our solutions</a>
@@ -320,7 +320,7 @@
                     </li>
 
                     <li class="site_map_internal">
-                        <h5>PRODUCTS & SERVICES</h5>
+                        <h5>PRODUCTS &amp; SERVICES</h5>
                         <ul>
                             <li>Billing</li>
                             <li>VAS</li>
