--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         </section>
                     </li>
                 </ul>
-                <div class="copyright"> Copyright C 2012 Comverse, Inc. | Privacy Policy </div> 
+                <div class="copyright"> Copyright &copy; 2012 Comverse, Inc. | Privacy Policy </div> 
             </div>
         </footer>
 
