--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <!-- -------------------------------- Carousel --------------------------- -->
 <!-- -------------------------------- Carousel --------------------------- -->
-		<div class="carousel_cls">
+<!-- 		<div class="carousel_cls">
             <section class="carousel_cls_con">
                	<h1>CREATE A SUPERIOR CUSTOMER EXPERIENCE</h1>
                     <div class="carousel_cls_con_up">
@@ -162,11 +162,11 @@
     					</article>
     				</section>
     		</section>
-		</div>
+		</div> -->
 
 <!-- -------------------------------- Offerings --------------------------- -->
 <!-- -------------------------------- Offerings --------------------------- -->
-		<div class="offerings_cls">
+<!-- 		<div class="offerings_cls">
             <section class="what_can_we_do">
 
         			<h3> WHAT CAN WE DO FOR YOU? </h3>
@@ -180,15 +180,14 @@
         				</ul>
         				<a href='#' class="see_solutions_btn">See all of our solutions</a>
             </section>
-        </div>
+        </div> -->
 <!-- -------------------------------- Happenings --------------------------- -->
 <!-- -------------------------------- Happenings --------------------------- -->
 
-        <div class="happenings_cls">
+ <!--        <div class="happenings_cls">
     		<section class="happenings_cls_internal">
     			<h4>WHAT'S HAPPENING AT COMVERSE?</h4>
     			<ul itemscope itemtype="http://schema.org/Event">
-    				<!-- <li class="news_cls"> NEWS --><!-- don't know which one to choose -->
     				<li class="news_cls"> IN THE NEWS
     					<div>
     						<p>
@@ -228,11 +227,11 @@
     				</li>
     			</ul>
     		</section>
-        </div>
+        </div> -->
 <!-- -------------------------------- Success Stories --------------------------- -->
 <!-- -------------------------------- Success Stories --------------------------- -->
 
-		<div class="success_stories_cls">
+<!-- 		<div class="success_stories_cls">
             <section class="success_stories_internal">
     			<h5>SUCCESS STORIES</h5>
     			<ul>
@@ -311,12 +310,12 @@
     			<a href='' class="more_btn_see_more">All 256 Success Stories</a>
                 <!-- TODO CHECK!!!!!!!!!!!!!!!!!! -->
 			</section>
-		</div>
+		</div> -->
 
 
 <!-- -------------------------------- Footer --------------------------- -->
 <!-- -------------------------------- Footer --------------------------- -->
-        <footer itemscope itemtype="http://schema.org/Event">
+<!--         <footer itemscope itemtype="http://schema.org/Event">
             <div class="site_map_cls">
                 <ul>
                     <li class="site_map_internal">
@@ -385,7 +384,7 @@
                 </ul>
                 <div class="copyright"> Copyright &copy; 2012 Comverse, Inc. | Privacy Policy </div> 
             </div>
-        </footer>
+        </footer> -->
 
         <script></script>
 
