--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <title>Comverse</title>
         <meta charset="UTF-8">
 		<link rel="stylesheet" href="css/main.css">
-
-        
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet' type='text/css'>
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
 
