--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
                 <nav>
                     <ul class "nav_cls">
-                        <li class="nav_cls-outside">
+                        <li class="nav_cls_external">
                         	<a href="#">YOUR NEEDS</a>
-        	                	<ul class="nav_cls-inside nav_cls">
+        	                	<ul class="nav_cls_internal">
         	                   		<li><a href="#">Smart Monetization</a></li>
         	                        <li><a href="#">Digital Customer Experience</a></li>
         	                        <li><a href="#">Personalized Choice &amp; Control</a></li>
@@ -41,9 +41,9 @@
         	                        <li><a href="#">Customer Evolution</a></li>
         	                    </ul> 
                         </li>
-                        <li class="nav_cls-outside">
+                        <li class="nav_cls_external">
                        	    <a href="#">OUT PORTFOLIO</a>
-                      		    <ul class="nav_cls-inside nav_cls">
+                      		    <ul class="nav_cls_internal">
                        				<li><a href="#">BSS - Bussiness Support Systems</a></li>
         		                    <li><a href="#">Converged BSS</a></li>
         		                    <li><a href="#">Active Customer Management</a></li>
@@ -67,9 +67,9 @@
                            
                             	</ul>
                         </li>
-                        <li class="nav_cls-outside">
+                        <li class="nav_cls_external">
         	                <a href="#">NEWS &amp; MEDIA</a>
-        	               	    <ul class="nav_cls-inside nav_cls">
+        	               	    <ul class="nav_cls_internal">
         		                    <li><a href="#">Press Releases</a></li>
         		                    <li><a href="#">Events</a></li>
         		                    <li><a href="#">In the News</a></li>
@@ -80,9 +80,9 @@
         		                    <li><a href="#">Articales and Papers</a></li>
         	                    </ul>
                         </li>
-                        <li class="nav_cls-outside">
+                        <li class="nav_cls_external">
                         	<a href="#">ABOUT COMVERSE</a>
-        	               	    <ul class="nav_cls-inside nav_cls">
+        	               	    <ul class="nav_cls_internal">
         		               		<li><a href="#">Overview</a></li>
         		                    <li><a href="#">Management</a></li>
         		                    <li><a href="#">Investors</a></li>
