--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 <!-- -------------------------------- Carousel --------------------------- -->
 <!-- -------------------------------- Carousel --------------------------- -->
-<!-- 		<div class="carousel_cls">
+		<div class="carousel_cls">
             <section class="carousel_cls_con">
                	<h1>CREATE A SUPERIOR CUSTOMER EXPERIENCE</h1>
                     <div class="carousel_cls_con_up">
@@ -164,7 +164,7 @@
     					</article>
     				</section>
     		</section>
-		</div> -->
+		</div>
 
 <!-- -------------------------------- Offerings --------------------------- -->
 <!-- -------------------------------- Offerings --------------------------- -->
