--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
                 <nav>
-                    <ul class "nav_cls">
+                    <ul class="nav_cls">
                         <li class="nav_cls_external">
                         	<a href="#">YOUR NEEDS</a>
         	                	<ul class="nav_cls_internal">
