--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     			<a href='' class="more_btn_see_more">All 256 Success Stories</a>
                 <!-- TODO CHECK!!!!!!!!!!!!!!!!!! -->
 			</section>
-		</div> -->
+		</div>
 
 
 <!-- -------------------------------- Footer --------------------------- -->
