offerings_cls added

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 <!-- -------------------------------- Offerings --------------------------- -->
 <!-- -------------------------------- Offerings --------------------------- -->
-<!-- 		<div class="offerings_cls">
+		<div class="offerings_cls">
             <section class="what_can_we_do">
 
         			<h3> WHAT CAN WE DO FOR YOU? </h3>
@@ -182,7 +182,7 @@
         				</ul>
         				<a href='#' class="see_solutions_btn">See all of our solutions</a>
             </section>
-        </div> -->
+        </div>
 <!-- -------------------------------- Happenings --------------------------- -->
 <!-- -------------------------------- Happenings --------------------------- -->
 
