--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 <!-- -------------------------------- Happenings --------------------------- -->
 <!-- -------------------------------- Happenings --------------------------- -->
 
- <!--        <div class="happenings_cls">
+        <div class="happenings_cls">
     		<section class="happenings_cls_internal">
     			<h4>WHAT'S HAPPENING AT COMVERSE?</h4>
     			<ul itemscope itemtype="http://schema.org/Event">
@@ -229,7 +229,7 @@
     				</li>
     			</ul>
     		</section>
-        </div> -->
+        </div>
 <!-- -------------------------------- Success Stories --------------------------- -->
 <!-- -------------------------------- Success Stories --------------------------- -->
 
