--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 		<div class="carousel_cls">
             <section class="carousel_cls_con">
                	<h1>CREATE A SUPERIOR CUSTOMER EXPERIENCE</h1>
-                    <!-- <section class="carousel_cls_con_up"> -->
-                        <ul class="carousel_cls_con_up_in">
+                    <section class="carousel_cls_con_up_in">
+                        <ul>
                             <li><a href="">Personalized Plans and Offerings, Smart Customer Interactions</a></li>
                             <li><a href="">Comprehensive Self-Service and Account Control</a></li>
                             <li><a href="">Personalized Social Media Interactions and more</a></li>
                         </ul>
-                    <!-- </section> -->
+                    </section>
     			   <section class="carousel_cls_internal">
     					<a href="" class="more_btn">learn more</a> 
                         <ul class="etc_cls">
