--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@
                             <li class="forth"><a href="">4</a></li>
                         </ul>
 
-    					<article class="boxes_cls">
+    					<article>
     						<ul>
-								<li class="orange_box"><h2>
+								<li class="boxes_cls orange_box"><h2>
 								Meet Us at Managed Services World Congress 2014</h2>
     								<a href="#">
                                     <img src="img/link-icon-image.png" alt="MoreInfo">
                                     Click for More Info</a>
     							</li>
-    							<li class="pink_box"><h2>
+    							<li class="boxes_cls pink_box"><h2>
     								Digital Lifestyle by Comverse</h2>	
     								<a href="#">
                                     <img src="img/link-icon-image.png" alt="ReadMore">
                                     Read more</a>
     							</li>
-    							<li class="green_box"><h2>
+    							<li class="boxes_cls green_box"><h2>
     								Smart Evolution One Goal, Many Paths</h2>
     								<a href="#">
                                     <img src="img/link-icon-image.png" alt="SeeHow">
