--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <ul class="nav_cls">
                         <li class="nav_cls_external">
                         	<a href="#">YOUR NEEDS</a>
-        	                	<ul class="nav_cls_internal">
+        	                	<ul class="nav_cls nav_cls_internal">
         	                   		<li><a href="#">Smart Monetization</a></li>
         	                        <li><a href="#">Digital Customer Experience</a></li>
         	                        <li><a href="#">Personalized Choice &amp; Control</a></li>
@@ -43,7 +43,7 @@
                         </li>
                         <li class="nav_cls_external">
                        	    <a href="#">OUT PORTFOLIO</a>
-                      		    <ul class="nav_cls_internal">
+                      		    <ul class="nav_cls nav_cls_internal">
                        				<li><a href="#">BSS - Bussiness Support Systems</a></li>
         		                    <li><a href="#">Converged BSS</a></li>
         		                    <li><a href="#">Active Customer Management</a></li>
@@ -69,7 +69,7 @@
                         </li>
                         <li class="nav_cls_external">
         	                <a href="#">NEWS &amp; MEDIA</a>
-        	               	    <ul class="nav_cls_internal">
+        	               	    <ul class="nav_cls nav_cls_internal">
         		                    <li><a href="#">Press Releases</a></li>
         		                    <li><a href="#">Events</a></li>
         		                    <li><a href="#">In the News</a></li>
@@ -82,7 +82,7 @@
                         </li>
                         <li class="nav_cls_external">
                         	<a href="#">ABOUT COMVERSE</a>
-        	               	    <ul class="nav_cls_internal">
+        	               	    <ul class="nav_cls nav_cls_internal">
         		               		<li><a href="#">Overview</a></li>
         		                    <li><a href="#">Management</a></li>
         		                    <li><a href="#">Investors</a></li>
