--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         					<li class="personalized">Personalized Choice &amp; Control</li>
         					<li class="business_trans">Business Transformation</li>
         				</ul>
-        				<a href='#' class="see_solutions_btn">See all of our solutions</a>
+        				<a href='#' class="more_btn see_solutions_btn">See all of our solutions</a>
             </section>
         </div>
 <!-- -------------------------------- Happenings --------------------------- -->
