--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
         		                    <li><a href="#">Customers</a></li>
         		                    <li><a href="#">Value &amp; Corporate Responsibility</a></li>
         		                    <li><a href="#">Industry Involvement</a></li>
+                                    <li><a href="#"><img src="img/Megamenu_About_Comverse_by_the_numbers.png" alt="About Comverse"></a></li>
+                                    
         	                	</ul>
                         </li>
                     </ul>   
