add images to nav menu

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         	                        <li><a href="#">Bussiness Enablement &amp; Growth</a></li>
         	                        <li><a href="#">Bussiness Stimulating Analytics</a></li>
         	                        <li><a href="#">Customer Evolution</a></li>
+                                    <li><a href="#"><img src="img/Megamenu_Your_Needs_eBook.jpg" alt="About Comverse"></a></li>
         	                    </ul> 
                         </li>
                         <li class="nav_cls_external">
@@ -64,7 +65,7 @@
         		                    <li><a href="#">Services</a></li>
         		                    <li><a href="#">Managed Services</a></li>
         		                    <li><a href="#">Learning &amp; Certification Services</a></li>
-                           
+                                  <li><a href="#"><img src="img/megamenu_digital_lifestyle.jpg" alt="About Comverse"></a></li>
                             	</ul>
                         </li>
                         <li class="nav_cls_external">
@@ -78,6 +79,8 @@
         		                    <li><a href="#">Multimedia &amp; Webinars</a></li>
         		                    <li><a href="#">Newsletter</a></li>
         		                    <li><a href="#">Articales and Papers</a></li>
+                                    <li><a href="#"><img src="img/Megamenu_News_and_media.jpg" alt="About Comverse"></a></li>
+
         	                    </ul>
                         </li>
                         <li class="nav_cls_external">
