--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         	                        <li><a href="#">Bussiness Enablement &amp; Growth</a></li>
         	                        <li><a href="#">Bussiness Stimulating Analytics</a></li>
         	                        <li><a href="#">Customer Evolution</a></li>
-                                    <li><a href="#"><img src="img/Megamenu_Your_Needs_eBook.jpg" alt="About Comverse"></a></li>
+                                    <li><a href="#" background="img/Megamenu_Your_Needs_eBook.jpg">
+                               <!--      <img src="img/Megamenu_Your_Needs_eBook.jpg" alt="About Comverse"> -->
+                                    </a></li>
         	                    </ul> 
                         </li>
                         <li class="nav_cls_external">
@@ -238,7 +240,7 @@
 <!-- -------------------------------- Success Stories --------------------------- -->
 <!-- -------------------------------- Success Stories --------------------------- -->
 
-<!-- 		<div class="success_stories_cls">
+		<div class="success_stories_cls">
             <section class="success_stories_internal">
     			<h5>SUCCESS STORIES</h5>
     			<ul>
@@ -315,7 +317,7 @@
 
     			</ul>
     			<a href='' class="more_btn_see_more">All 256 Success Stories</a>
-                <!-- TODO CHECK!!!!!!!!!!!!!!!!!! -->
+                <!-- TODO CHECK!!!!!!!!!!!!!!!!!!
 			</section>
 		</div>
 
