--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
         	                        <li><a href="#">Bussiness Enablement &amp; Growth</a></li>
         	                        <li><a href="#">Bussiness Stimulating Analytics</a></li>
         	                        <li><a href="#">Customer Evolution</a></li>
-                                    <li><a href="#" background="img/Megamenu_Your_Needs_eBook.jpg">
-                               <!--      <img src="img/Megamenu_Your_Needs_eBook.jpg" alt="About Comverse"> -->
-                                    </a></li>
+                                    <li><a href="#"><img src="img/Megamenu_Your_Needs_eBook.jpg" alt="About Comverse"></a></li>
         	                    </ul> 
                         </li>
                         <li class="nav_cls_external">
