--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <li class="forth"><a href="">4</a></li>
                         </ul>
 
-    					<article>
+    					<!-- <article> -->
     						<ul>
 								<li class="boxes_cls orange_box"><h2>
 								Meet Us at Managed Services World Congress 2014</h2>
@@ -168,7 +168,7 @@
     							</li>
 
     						</ul>
-    					</article>
+    					<!-- </article> -->
     				</section>
     		</section>
 		</div>
