--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
 
         			<h3> WHAT CAN WE DO FOR YOU? </h3>
         				<ul class="icons_cls">
-        					<li class="business_stimu"><a href='#'>Business Stimulating Analytics</a></li>
-        					<li class="digital"><a href='#'>Digital Customer Experience</a></li>
-        					<li class="smart_mone"><a href='#'>Smart Monetization</a></li>
-        					<li class="optimization"><a href='#'>Optimization and Efficiency</a></li>
-        					<li class="personalized"><a href='#'>Personalized Choice &amp; Control</a></li>
-        					<li class="business_trans"><a href='#'>Business Transformation</a></li>
+        					<li><a href='#'><div class="business_stimu"></div>Business Stimulating Analytics</a></li>
+        					<li><a href='#'><div class="digital">Digital Customer Experience</a></li>
+        					<li><a href='#'><div class="smart_mone">Smart Monetization</a></li>
+        					<li><a href='#'><div class="optimization">Optimization and Efficiency</a></li>
+        					<li><a href='#'><div class="personalized">Personalized Choice &amp; Control</a></li>
+        					<li><a href='#'><div class="business_trans">Business Transformation</a></li>
         				</ul>
         				<a href='#' class="more_btn see_solutions_btn">See all of our solutions</a>
             </section>
