--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     				</li>
 
     			</ul>
-    			<a href='' class="more_btn_see_more">All 256 Success Stories</a>
+    			<a href='' class="more_btn more_btn_see_more">All 256 Success Stories</a>
                 <!-- TODO CHECK!!!!!!!!!!!!!!!!!!
 			</section>
 		</div>
