horizontal lists fixed

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <!-- -------------------------------- Happenings --------------------------- -->
 
         <div class="happenings_cls">
-    		<section class="happenings_cls_internal">
+    		<!-- <section class="happenings_cls_internal"> -->
     			<h4>WHAT'S HAPPENING AT COMVERSE?</h4>
     			<ul itemscope itemtype="http://schema.org/Event">
     				<li class="news_cls"> IN THE NEWS
@@ -235,13 +235,13 @@
     					</div>
     				</li>
     			</ul>
-    		</section>
+    		<!-- </section> -->
         </div>
 <!-- -------------------------------- Success Stories --------------------------- -->
 <!-- -------------------------------- Success Stories --------------------------- -->
 
 		<div class="success_stories_cls">
-            <section class="success_stories_internal">
+            <!-- <section class="success_stories_internal"> -->
     			<h5>SUCCESS STORIES</h5>
     			<ul>
 
