--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                             <li><a href="">Personalized Social Media Interactions and more</a></li>
                         </ul>
                     <!-- </section> -->
+
     			   <section class="carousel_cls_internal">
     					<a href="" class="more_btn">learn more</a> 
                         <ul class="etc_cls">
@@ -145,8 +146,9 @@
                             <li class="third"><a href="">3</a></li>
                             <li class="forth"><a href="">4</a></li>
                         </ul>
-
+                    </section>
     					<!-- <article> -->
+                    <section class="carousel_cls_internal">
     						<ul>
 								<li class="boxes_cls orange_box"><h2>
 								Meet Us at Managed Services World Congress 2014</h2>
