--- a/index.html
+++ b/index.html
@@ -265,8 +265,13 @@
                         </p>
 
                         </div>
-          
-                        <span class="mtc"></span>
+                        <div class="mtc">
+                            <img src="mts_w108px_X_h95px.jpg" alt="mtc">
+                            <div class="textbox">
+                                 <p class="text">mts</p>
+                            </div>
+                        </div>
+                        <!-- <span class="mtc"></span> -->
                         <span class="tata_sky"></span>
                         <span class="upc"></span>
     				</li>
