--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
                         </div>
                         <div class="mtc">
-                            <img src="mts_w108px_X_h95px.jpg" alt="mtc">
+                            <img src="../img/mts_w108px_X_h95px.jpg" alt="mtc">
                             <div class="textbox">
                                  <p class="text">mts</p>
                             </div>
