try hover swipe

--- a/index.html
+++ b/index.html
@@ -267,8 +267,9 @@
                         </div>
                         <div class="mtc">
                             <img src="img/mts_w108px_X_h95px.jpg" alt="mtc">
-                            <div class="textbox">
-                                 <p class="text">mts</p>
+                            <div class="bg">
+                                 <!-- <p class="bg_in">mts</p> -->
+                                 <img class="bg_in" src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
                             </div>
                         </div>
                         <!-- <span class="mtc"></span> -->
