--- a/index.html
+++ b/index.html
@@ -268,8 +268,9 @@
                         <div class="mtc">
                             <img src="img/mts_w108px_X_h95px.jpg" alt="mtc">
                             <div class="bg">
-                                 <!-- <p class="bg_in">mts</p> -->
-                                 <img class="bg_in" src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 <p class="bg_in">
+                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 </p>
                             </div>
                         </div>
                         <!-- <span class="mtc"></span> -->
