--- a/index.html
+++ b/index.html
@@ -274,14 +274,28 @@
                             </div>
                         </div>
                         <!-- <span class="mtc"></span> -->
-                        <span class="tata_sky"></span>
-                        <span class="upc"></span>
+                        <div class="tata_sky">
+                            <img src="img/Tata_Sky_w108px_X_h95px.jpg" alt="tata">
+                            <div class="bg">
+                                 <p class="bg_in">
+                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 </p>
+                            </div> 
+                        </div>
+                        <div class="upc">
+                            <img src="img/upc_w108px_X_h95px.jpg" alt="upc">
+                            <div class="bg">
+                                 <p class="bg_in">
+                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 </p>
+                            </div>
+                        </div>
     				</li>
 
     				<li itemscope itemtype="http://schema.org/Person" class="two">
-                        <span class="max_telecom"></span>
-                        <span class="knibctap"></span>
-                        <span class="videocon"></span>
+                        <div class="max_telecom"></div>
+                        <div class="knibctap"></div>
+                        <div class="videocon"></div>
 
                         <div class="graeme_miller">
 
