--- a/index.html
+++ b/index.html
@@ -150,21 +150,21 @@
     					<!-- <article> -->
                     <section class="carousel_cls_internal">
     						<ul>
-								<li class="boxes_cls orange_box"><h2>
-								Meet Us at Managed Services World Congress 2014</h2>
+								<li class="boxes_cls orange_box">
     								<a href="#">
+                                    <h2>Meet Us at Managed Services World Congress 2014</h2>
                                     <img src="img/link-icon-image.png" alt="MoreInfo">
                                     Click for More Info</a>
     							</li>
-    							<li class="boxes_cls pink_box"><h2>
-    								Digital Lifestyle by Comverse</h2>	
+    							<li class="boxes_cls pink_box">	
     								<a href="#">
+                                    <h2>Digital Lifestyle by Comverse</h2>
                                     <img src="img/link-icon-image.png" alt="ReadMore">
                                     Read more</a>
     							</li>
-    							<li class="boxes_cls green_box"><h2>
-    								Smart Evolution One Goal, Many Paths</h2>
+    							<li class="boxes_cls green_box">
     								<a href="#">
+                                    <h2>Smart Evolution One Goal, Many Paths</h2>
                                     <img src="img/link-icon-image.png" alt="SeeHow">
                                     See How</a>
     							</li>
