--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     						<ul>
 								<li class="boxes_cls orange_box">
     								<a href="#">
-                                    <h2>Meet Us at Managed Services World Congress 2014</h2>
+                                    Meet Us at Managed Services World <br/ > Congress 2014
                                     <img src="img/link-icon-image.png" alt="MoreInfo">
                                     Click for More Info</a>
     							</li>
