fix success icons

--- a/index.html
+++ b/index.html
@@ -293,9 +293,31 @@
     				</li>
 
     				<li itemscope itemtype="http://schema.org/Person" class="two">
-                        <div class="max_telecom"></div>
-                        <div class="knibctap"></div>
-                        <div class="videocon"></div>
+                        <div class="max_telecom">
+                            <img src="img/MAX_telecom_w108px_X_h95.jpg" alt="max telecom">
+                            <div class="bg">
+                                 <p class="bg_in">
+                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 </p>
+                            </div> 
+
+                        </div>
+                        <div class="knibctap">
+                            <img src="img/Kyivstarw_w108px_X_h95.jpg" alt="knibctap">
+                            <div class="bg">
+                                 <p class="bg_in">
+                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 </p>
+                            </div>
+                        </div>
+                        <div class="videocon">
+                            <img src="img/VIDEOCON_w108px_X_h95px.jpg" alt="videocon">
+                            <div class="bg">
+                                 <p class="bg_in">
+                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 </p>
+                            </div>
+                        </div>
 
                         <div class="graeme_miller">
 
@@ -335,8 +357,24 @@
                             </p>
                             </div>
 
-                        <span class="three_mob"></span>
-                        <span class="play"></span>
+                        <!-- <span class="three_mob"></span> -->
+                        <div class="three_mob">
+                            <img src="img/3mob_w108px_X_h95px.jpg" alt="three mob">
+                            <div class="bg">
+                                 <p class="bg_in">
+                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 </p>
+                            </div>
+                        </div>
+                        <!-- <span class="play"></span> -->
+                        <div class="play">
+                            <img src="img/play_w108px_X_h95px.jpg" alt="play">
+                            <div class="bg">
+                                 <p class="bg_in">
+                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                 </p>
+                            </div>
+                        </div>
     				</li>
 
     			</ul>
