--- a/index.html
+++ b/index.html
@@ -265,29 +265,31 @@
                         </p>
 
                         </div>
-                        <div class="mtc">
-                            <img src="img/mts_w108px_X_h95px.jpg" alt="mtc">
-                            <div class="bg">
-                                 <p class="bg_in">
-                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
-                                 </p>
+                        <div class="companies">
+                            <div class="mtc">
+                                <img src="img/mts_w108px_X_h95px.jpg" alt="mtc">
+                                <div class="bg">
+                                     <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div>
                             </div>
-                        </div>
-                        <!-- <span class="mtc"></span> -->
-                        <div class="tata_sky">
-                            <img src="img/Tata_Sky_w108px_X_h95px.jpg" alt="tata">
-                            <div class="bg">
-                                 <p class="bg_in">
-                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
-                                 </p>
-                            </div> 
-                        </div>
-                        <div class="upc">
-                            <img src="img/upc_w108px_X_h95px.jpg" alt="upc">
-                            <div class="bg">
-                                 <p class="bg_in">
-                                 <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
-                                 </p>
+                            <!-- <span class="mtc"></span> -->
+                            <div class="tata_sky">
+                                <img src="img/Tata_Sky_w108px_X_h95px.jpg" alt="tata">
+                                <div class="bg">
+                                     <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div> 
+                            </div>
+                            <div class="upc">
+                                <img src="img/upc_w108px_X_h95px.jpg" alt="upc">
+                                <div class="bg">
+                                     <p class="bg_in">
+                                     <img src="img/logos_generic_2nd_side_cut_02_w108px_x_h95px.jpg" alt="bg">
+                                     </p>
+                                </div>
                             </div>
                         </div>
     				</li>
